# draught-of-fpl

./: .gitignore  Cargo.toml  Config.toml  README.md  Rocket.toml  config.toml
db/: create-db.py  create-db.sh
docker/: app.Dockerfile  build_app_container.sh  run_app_container.sh
src/: computer.rs  fetcher.rs  initializer.rs  main.rs  propcomp.rs
src/client/: mod.rs
src/fpl/: mod.rs
src/fpl/client/: mod.rs
src/fpl/server/: mod.rs
src/fpl/structs/: details.rs  game.rs  live.rs  mod.rs  staticinfo.rs  teamgw.rs  teaminfo.rs
src/storage/: endpoints.rs  mod.rs  table.rs
src/structs/: details.rs  game.rs  live.rs  mod.rs  staticinfo.rs  teamgw.rs  teaminfo.rs
stack/: .env  DEPLOYREADME.md  docker-compose.yaml
www/vue/: index.html  styles.css
www/vue/js/: app.js  config.js  functions.js
wwwstatic/: index.html  update.js
