[package]
name = "draught-of-fpl"
version = "0.1.0"
authors = ["fl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2" # Web server-framework
log = "0.4"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"]}
serde_json = "1.0.55"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"

