[package]
name = "draught-of-fpl"
version = "0.1.0"
authors = ["fl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
clap = { version = "4.4", features = ["derive"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tokio = { version = "1.20", features = ["full"] }
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
toml = "0.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
